--- a/localist/client/style/localist.css
+++ b/localist/client/style/localist.css
@@ -2,6 +2,7 @@
 html, body{
 	height: 100%;
 	width: 100%;
+	font-family: alegreyaReg;
 }
 
 @font-face{
@@ -39,6 +40,25 @@ header {
     height: 100%;
     z-index: -1;
     background-image: url(img/cityview.jpg);
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+/*    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);*/
+    -webkit-filter: opacity(0.7);
+    filter: opacity(0.7);
+}
+
+.background-image-about{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url(img/stockholm.jpg);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -238,4 +258,11 @@ header .header-content .header-content-inner p {
 
 .container-fuzz{
     background-color: rgba(209, 209, 209, 0.5);
+}
+
+.map-container{
+	width: 500px;
+	max-width: 100%;
+	height: 500px;
+	max-height: 100%;
 }
