--- a/localist/client/views/main.html
+++ b/localist/client/views/main.html
@@ -2,31 +2,11 @@
     <div class="background-image"></div>
     <header>
         <div class="header-content">
-            <nav id="main-pg-navbar" class="navbar navbar-default navbar-fixed-top nav-custom" role="navigation">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-pg-navbar" aria-expanded="false" aria-controls="navbar">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a href="#" class="navbar-brand color-black">Localist</a>
-                    </div>
-                    <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li>
-                                <a href="mailto:reservationhunter@gmail.com" class="color-black navbar-link">CONTACT</a>
-                            </li>
-                            <li><a href="#" class="color-black navbar-link">ABOUT</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            {{#if userSubscribed}}
-                <div class="alert alert-success"><strong>Congratulations!</strong> Your email has been submitted.</div>
-            {{/if}}
+            {{> navbar}}
             <div class="header-content-inner">
+                {{#if userSubscribed}}
+                    <div class="alert alert-success"><strong>Congratulations!</strong> Your email has been submitted.</div>
+                {{/if}}
                 <h1>Explore like a local.</h1>
                 <hr>
                 <p>Travel like a local. Let Localist act as your local guide and find cool locations and hangouts in any city by choosing from our curated selection of hotspots.</p>
