--- a/localist/client/style/localist.css
+++ b/localist/client/style/localist.css
@@ -261,8 +261,25 @@ header .header-content .header-content-inner p {
 }
 
 .map-container{
-	width: 500px;
+	width: 1500px;
 	max-width: 100%;
-	height: 500px;
+	height:800px;
 	max-height: 100%;
+}
+
+.overmap-container{
+	position: absolute;
+	z-index: 1;
+	width: 25%;
+	top: 10%;
+	/*match with navbar brand*/
+	margin-left: 70px;
+	padding-left: 15px;
+	padding-right: 15px;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #FFF;
+}
+
+.marker-description{
+	background-color: rgba(0, 0, 0, 0.3);
 }
