styles work, in progress

--- a/localist/client/views/app.html
+++ b/localist/client/views/app.html
@@ -1,8 +1,7 @@
 <template name="app">
     <header>
-        <!-- <div class="header-content" style="max-height:100%;"> -->
-            {{> navbar}}
-            <br>
+        <!-- <div class="header-content" style="min-height:100%;"> -->
+            {{> mapNavbar}}
             <div class="overmap-container">
                 {{#if displayInfo}}
                     {{> markerInfo}}
