--- a/localist/client/style/localist.css
+++ b/localist/client/style/localist.css
@@ -261,10 +261,18 @@ header .header-content .header-content-inner p {
 }
 
 .map-container{
+	position: absolute;
 	width: 1500px;
 	max-width: 100%;
 	height:800px;
+	min-height: 100%;
 	max-height: 100%;
+	-webkit-filter: opacity(0.7);
+	filter: opacity(0.7);
+}
+/*cover page with map*/
+.map-canvas{
+	position: absolute;
 }
 
 .overmap-container{
@@ -280,6 +288,12 @@ header .header-content .header-content-inner p {
 	color: #FFF;
 }
 
+.marker-title{
+	border-color: #FFF;
+	background-color: rgba(0, 0, 0, 0.3);
+}
+
 .marker-description{
+	border-color: #FFF;
 	background-color: rgba(0, 0, 0, 0.3);
 }
