--- a/localist/client/views/navbar.html
+++ b/localist/client/views/navbar.html
@@ -21,3 +21,21 @@
         </div>
     </nav>
 </template>
+
+<template name="mapNavbar">
+    <nav class="navbar navbar-default navbar-fixed-top nav-custom" role="navigation">
+        <div class="container">
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-left">
+                    <li>
+                        <a href="#" class="color-black"><button class="btn color-black">HOME</button></a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="mailto:reservationhunter@gmail.com" class="color-black"><button class="btn color-black">CONTACT</button></a></li>
+                    <li><a href="/about" class="color-black"><button class="btn color-black">ABOUT</button></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</template>
