--- a/localist/client/views/panel.html
+++ b/localist/client/views/panel.html
@@ -1,18 +1,24 @@
 <template name="askAddMarker">
     <h4>Do you want to add a new marker?</h4>
-    <div class="row">
-        <button class="btn btn-default" id="add-marker-btn">Yes</button>
-        <button class="btn btn-default" id="no-marker-btn">No</button>
+    <div class="row" style="margin-bottom:10px;">
+        <button class="btn btn-color" id="add-marker-btn">Yes</button>
+        <button class="btn btn-color" id="no-marker-btn">No</button>
     </div>
 </template>
 
 <template name="insertMarker">
     <h4>Describe the location here:</h4>
-    <input class="marker-title">
-    <textarea class="marker-description" rows="6"></textarea>
-    <div class="row">
-        <button class="btn btn-default" id="insert-marker-btn">Place it!</button>
-        <button class="btn btn-default" id="cancel-marker-btn">Cancel</button>
+    <div class="form-group" style="text-align:left;">
+        <label for="marker-title" class="color-white title-label">Title:</label>
+        <input class="marker-title form-control" id="marker-title" placeholder="Title">
+    </div>
+    <div class="form-group" style="text-align:left;">
+        <label for="marker-description" class="color-white description-label">Description:</label>
+        <textarea class="marker-description form-control" id="marker-description" rows="6"></textarea>
+    </div>
+    <div class="row" style="margin-bottom:10px;">
+        <button class="btn btn-color" id="insert-marker-btn">Place it!</button>
+        <button class="btn btn-color" id="cancel-marker-btn">Cancel</button>
     </div>
 </template>
 
@@ -20,8 +26,8 @@
     <h4>{{title}}</h4>
     <p>{{description}}</p>
     {{#if streetView}}
-        <button class="btn btn-default" id="back-to-map">Back to the Map</button>
+        <button class="btn btn-color" id="back-to-map" style="margin-bottom:10px;">Back to the Map</button>
     {{else}}
-        <button class="btn btn-default" id="go-to-street">Go to Street View</button>
+        <button class="btn btn-color" id="go-to-street" style="margin-bottom:10px;">Go to Street View</button>
     {{/if}}
 </template>
