--- a/localist/client/style/localist.css
+++ b/localist/client/style/localist.css
@@ -307,43 +307,43 @@ header .header-content .header-content-inner p {
 }
 
 /* white background and box outline */
-.gm-style > div:first-child > div + div > div:last-child > div > div:first-child > div
+/*.gm-style > div:first-child > div + div > div:last-child > div > div:first-child > div
 {
     /* we have to use !important because we are overwritng inline styles */
-    background-color: transparent !important;
+/*    background-color: transparent !important;
     box-shadow: none !important;
     width: auto !important;
     height: auto !important;
-}
+}*/
 
 /* arrow colour */
-.gm-style > div:first-child > div + div > div:last-child > div > div:first-child > div > div > div
+/*.gm-style > div:first-child > div + div > div:last-child > div > div:first-child > div > div > div
 {
 	display: none !important;
 	box-shadow: none !important;
     background-color: transparent !important;
 	border: none !important;
-}
+}*/
 
 /* close button */
-.gm-style > div:first-child > div + div > div:last-child > div > div:last-child
+/*.gm-style > div:first-child > div + div > div:last-child > div > div:last-child
 {
     margin-right: 5px;
     margin-top: 5px;
-}
+}*/
 
 /* image icon inside close button */
-.gm-style > div:first-child > div + div > div:last-child > div > div:last-child > img
+/*.gm-style > div:first-child > div + div > div:last-child > div > div:last-child > img
 {
     display: none;
-}
+}*/
 
 /* positioning of infowindow */
-.gm-style-iw
+/*.gm-style-iw
 {
     top: 70px !important;
     left: 70px !important;
-}
+}*/
 
 #add-marker-btn{
 	font-family: alegreyaReg;
