--- a/localist/client/views/about.html
+++ b/localist/client/views/about.html
@@ -3,10 +3,12 @@
     <header>
     <div class="header-content">
         {{> navbar}}
-        <!-- <div class="header-content-inner"> -->
+        <div class="header-content-inner">
+            <div class="container-fuzz container">
             <h1 style="text-align:left;">About Localist</h1>
             <p style="text-align:left;">Localist was built as a side project by a student looking for cool things to do and places to go wherever he went. This was made as a way to identify those places.</p>
-        <!-- </div> -->
+            </div>
+        </div>
     </div>
     </header>
 </template>
