--- a/localist/client/views/about.html
+++ b/localist/client/views/about.html
@@ -4,9 +4,16 @@
     <div class="header-content">
         {{> navbar}}
         <div class="header-content-inner">
-            <div class="container-fuzz container">
-            <h1 style="text-align:left;">About Localist</h1>
-            <p style="text-align:left;">Localist was built as a side project by a student looking for cool things to do and places to go wherever he went. This was made as a way to identify those places.</p>
+            <div class="container container-fuzz" style="left:20%;width:60%;">
+            <h3>FAQs</h3>
+            <div class="about-pg-text">
+                <h4>What is Localist?</h4>
+                <p>Localist helps you find new and interesting places in any city that you’re traveling to. Enhance your enjoyment of well-known tourist haunts through the insider information of locals, and broaden your horizons by discovering new areas of interest.</p>
+                <h4>How does it work?</h4>
+                <p>It’s simple to use Localist! At any location around the map, markers will pop up denoting spots that other users found interesting. Tap on the marker to get a street view of the area, along with a brief description, and decide whether or not you want to visit. Don’t forget to give the marker a thumbs up if you liked the spot, and help others discover it!</p>
+                <h4>Finding places is great, but how do I add one?</h4>
+                <p>It’s easy to help others discover your city. Navigate the map until you find your spot, and click to drop a marker at that spot. Move your street view around until you get the panorama you want, and write a short description about the place and why it interests you. Pending a short review we’ll have your marker instantly dropped onto the map.</p>
+            </div>
             </div>
         </div>
     </div>
