--- a/localist/client/views/main.html
+++ b/localist/client/views/main.html
@@ -9,7 +9,7 @@
                 {{/if}}
                 <h1>Explore like a local.</h1>
                 <hr>
-                <p>Travel like a local. Let Localist act as your local guide and find cool locations and hangouts in any city by choosing from our curated selection of hotspots.</p>
+                <p class="header-center">Travel like a local. Let Localist act as your local guide and find cool locations and hangouts in any city by choosing from our curated selection of hotspots.</p>
                 <div class="col-md-4 col-md-offset-4">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Email" id="email-addr">
