--- a/localist/client/views/navbar.html
+++ b/localist/client/views/navbar.html
@@ -15,7 +15,12 @@
                     <li>
                         <a href="mailto:reservationhunter@gmail.com" class="color-black navbar-link">CONTACT</a>
                     </li>
-                    <li><a href="/about" class="color-black navbar-link">ABOUT</a></li>
+                    <li>
+                        <a href="/about" class="color-black navbar-link">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="/blog" class="color-black navbar-link">BLOG</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -34,6 +39,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="mailto:reservationhunter@gmail.com" class="color-black"><button class="btn map-btn color-black">CONTACT</button></a></li>
                     <li><a href="/about" class="color-black"><button class="btn map-btn color-black">ABOUT</button></a></li>
+                    <li><a href="/blog" class="color-black"><button class="btn map-btn color-black">BLOG</button></a></li>
                 </ul>
             </div>
         </div>
