--- a/localist/client/style/localist.css
+++ b/localist/client/style/localist.css
@@ -14,8 +14,12 @@ html, body{
     font-family: alegreyaReg;
     src: url(fonts/alegreyasansregular.ttf);
 }
+hr{
+	border-color: #f05f40;
+	border-width: 3px;
+}
 
-hr {
+header hr {
     max-width: 50px;
     border-color: #f05f40;
     border-width: 3px;
@@ -59,6 +63,25 @@ header {
     height: 100%;
     z-index: -1;
     background-image: url(img/stockholm.jpg);
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+/*    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);*/
+    -webkit-filter: opacity(0.7);
+    filter: opacity(0.7);
+}
+
+.background-image-blog{
+	position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url(img/cathedral.jpg);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
